<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CJay</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="action_settings">Cấu hình</string>
    <string name="default_container_id">Untitled</string>
    <string name="container_not_found">KHÔNG TÌM THẤY CONTAINER.</string>
    <string name="container_not_found_no_add_more">KHÔNG TÌM THẤY CONTAINER.\nLIÊN HỆ CỔNG.</string>
    <string name="camera_button_tooltip">Chụp hình</string>
    <string name="progress">Loading…</string>
    <string name="list_items">Danh sách container</string>
    <string name="list_issues">Danh sách lỗi</string>
    <string name="container_non_av">CONTAINER ĐANG CHỜ XỬ LÝ.</string>

    <!-- ACRA -->
    <string name="crash_toast_text">Ooooops! I crashed, but a report has been sent to my developer to help fix the issue!</string>
    <string name="crash_dialog_title">JayPix has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you</string>

    <!-- menu titles -->
    <string name="menu_camera_title">Chụp hình</string>
    <string name="menu_edit_container_title">Sửa thông tin container</string>
    <string name="menu_upload_title">Tải lên</string>
    <string name="menu_av_export_title">Xuất công chưa AV</string>
    <string name="menu_trash_title">Xoá</string>
    <string name="menu_logout_title">Đăng xuất</string>
    <string name="menu_select_all">Chọn tất cả</string>
    <string name="menu_select_none">Bỏ chọn tất cả</string>
    <string name="menu_more_title">Thêm</string>
    <string name="menu_username_title">Username</string>
    <string name="menu_refresh">Tải lại</string>
    <string name="menu_role_title">Role</string>
    <string name="menu_clear_uploaded_title">Đăng xuất</string>
    <string name="menu_issue_report_check_title">Báo cáo xong</string>
    <string name="menu_import_title">Import hình ảnh</string>
    <string name="menu_av_title">Công AV</string>

    <!--  -->
    <string name="notification_uploading_photo">Uploading Photo %1$s/%2$d</string>
    <string name="notification_uploading_photo_progress">Uploading %1$d/%3$d | %2$d%%</string>
    
    <string name="notification_uploading_container">Uploading %1$s</string>
    <string name="notification_uploading_container_progress">Uploading %1$s</string>

    <!-- exception alert -->
    <string name="alert_try_again">Có lỗi phát sinh. Hãy thử lại lần nữa</string>
    <string name="alert_no_network">Không có kết nối mạng</string>
    <string name="alert_ssl_timeout">Có vấn đề với SSL</string>
    <string name="alert_server_error">Máy chủ có vấn đề. Hãy thử lại lần sau</string>
    <string name="alert_no_issue_container">Container chưa được báo cáo đủ. Hãy kiểm tra lại.</string>
    <string name="alert_cannot_fix_issue">Lỗi này không được phép sửa chữa</string>
    <string name="alert_cannot_export_container">Container chưa được phép xuất</string>
    <string name="alert_invalid_container">Container không hợp lệ. Hãy kiểm tra lại.</string>
    <string name="alert_camera_preview">Ứng dụng không xử lý kịp. Hãy chụp chậm lại.</string>

    <!--  -->
    <string name="empty_uploads">No uploads available</string>
    <string name="empty_items">No items available</string>
    <string name="empty_issues">Đã sửa chữa hết các lỗi</string>
    <string name="logout">Logout %1$s</string>
    <string name="logout_prompt_title">Dữ liệu sẽ mất sau khi đăng xuất.Bạn có chắc chưa?</string>
    <string name="title_activity_user_log">Usage Log</string>

    <!--  -->
    <string name="image_type_description_import">Hình Nhập</string>
    <string name="image_type_description_export">Hình Xuất</string>
    <string name="image_type_description_report">Hình Giám Định</string>
    <string name="image_type_description_repaired">Hình Sửa Chữa</string>

    <!--  -->
    <string name="force_export">Xuất theo chỉ định</string>

</resources>