<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_camera"
        android:icon="@drawable/ic_menu_camera"
        android:showAsAction="always"
        android:title="@string/menu_camera_title"/>
    <item
        android:id="@+id/menu_edit_container"
        android:icon="@drawable/icon_menu_edit"
        android:showAsAction="always"
        android:title="@string/menu_edit_container_title"/>
    <item
        android:id="@+id/menu_upload"
        android:icon="@drawable/ic_action_upload"
        android:showAsAction="always"
        android:title="@string/menu_upload_title"/>
    <item
        android:id="@+id/menu_more"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="never"
        android:title="More">
    </item>
    <item
        android:id="@+id/menu_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:showAsAction="never"
        android:title="@string/menu_logout_title"/>

    <!--
    <menu>
            <item
                android:id="@+id/menu_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:showAsAction="never"
                android:title="@string/menu_logout_title"/>
        </menu>
    </item>
    -->

</menu>